--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -1,10 +1,6 @@
 @import '../../../_mixins.scss';
 
 // whole page container
-#about {
-  width: 100%;
-}
-
 .about-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -50,15 +46,20 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: auto;
 }
 
 .profile-picture {
   width: 300px;
   height: 300px;
-  border-radius: 1rem;
+  // border-radius: 1rem;
   box-shadow: 0 1rem 2rem #d9d9d9;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
+  @include respond-to('mobile') {
+    width: 200px;
+    height: 200px;
+  }
 }
 
 
@@ -79,16 +80,25 @@
   }
   & h1 {
     color: var(--primary);
-    font-family: 'Kristi', cursive;
-    font-size: 112px;
-    font-size: 7rem;
+    font-family: 'Arvo', serif;
+    font-size: 5rem;
+    @include respond-to('small') {
+      margin-top: 0.5rem;
+      font-size: 2rem;
+    }
   }
   & h4 {
     font-family: 'Arvo', serif;
+    @include respond-to('small') {
+      font-size: 1rem;
+    }
   }
   & p {
     font-size: 20px;
     font-size: 1.25rem;
+    @include respond-to('small') {
+      font-size: 0.9rem;
+    }
   }
 }
 
@@ -98,6 +108,9 @@
   font-size: 1.25rem;
   @include respond-to('xl') {
     list-style: none;
+  }
+  @include respond-to('small') {
+    margin-left: none;
   }
 }
 
@@ -109,18 +122,16 @@
 }
 
 .paragraph-container {
-  margin-top: 25px;
-  // padding: 16px;
-  // padding: 1rem;
-  box-shadow: 0 0.5rem 1rem #d9d9d9;
-  @include respond-to('medium') {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: auto;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 25px;
+  margin-top: 1rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ @include respond-to('small') {
   }
+}
+.paragraph-container p {
+  width: 80%;
+  text-align: left;
+  font-family: 'Arvo', serif;
 }
