--- a/src/components/Pages/Navigation/Navigation.scss
+++ b/src/components/Pages/Navigation/Navigation.scss
@@ -61,9 +61,6 @@
 
 .navbar-toggler {
   font-size: 2rem;
-  @include respond-to('mobile') {
-    margin-right: 1rem;
-  }
 }
 
 .nav-link {
